# Raksa

./: .gitignore  LICENSE  README.md  README_ID.md  manifest.py  package.json  pyproject.toml  raksa.py  verify_client.py
backend/: main.py
examples/: esp32_dht_monitor.py  esp32_wifi_sensor.py  main_edge.py  ml_anomaly.py  ml_classification.py  ml_clustering.py  ml_evaluation.py  ml_forecasting.py  ml_neural.py  ml_preprocessing.py
raksa/: __init__.py  client.py  evaluation.py  models.py  neural.py  preprocessing.py
